--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
             </div>
             <div class="card shadow-lg col-md-3" style="width: 18rem; margin:  40px;">
-                <img class="card-img-top" src="/New Project.png" alt="Card image cap">
+                <img class="card-img-top" src="New Project.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Combustion Of Organic Molecules</h5>
                     <h6>Glucose And ATP</h6>
